--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
         "build": "vite build",
         "lint:stylelint": "stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
         "preview": "vite preview",
-        "prepare": "husky",
-        "lint:lint-staged": "lint-staged",
-        "commitlint": "commitlint --edit"
+        "prepare": "husky install",
+        "lint:lint-staged": "lint-staged"
     },
     "keywords": [],
     "author": "",
@@ -34,7 +33,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-vue": "^9.26.0",
         "globals": "^15.2.0",
-        "husky": "^9.0.11",
+        "husky": "8.0.3",
         "less": "^4.2.0",
         "lint-staged": "^15.2.2",
         "nprogress": "^0.2.0",
