--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "projectP",
+    "name": "htz-cli",
     "version": "0.0.1",
     "description": "企业级业务开发模版",
     "main": "index.js",
